fixed header overlapping

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -9,7 +9,7 @@
     height: 57px;
     padding: 5px 0;
     position: fixed;
-    z-index: 3;
+    z-index: 100;
     margin: 0;
 }
 
